# rendevouz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cobertura.xml  configuration.yaml  spec.yaml
.cargo/: config.offline.toml  config.toml
.github/workflows/: pipeline.yaml
configuration/: base.yaml
containers/local/: Rendevouz.dev.Dockerfile
containers/prod/: Rendevouz.prod.Dockerfile
github/workflows/: audit.yaml  pipeline.yaml
scripts/: build-dev.sh  build-prod.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
