[package]
name = "rendevouz"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Harpool <tharpool@jackhenry.com"]

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "rendevouz"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = "0.11"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

