[package]
name = "rendevouz"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Harpool <tharpool@jackhenry.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rendevouz"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
serde-aux = "4"

[dev-dependencies]
reqwest = "0.11"
rstest = "0.18.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

